setting explicit height on final debriefing survey and moving payment information to the top.
--HG--
extra : rebase_source : 1dc4a4a9354392febd8200f763d1b5b4197da050

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -303,6 +303,10 @@
                     return false;
                 }
                 confirmAction(element, function(confirmed, action) {
+                    if ($.inArray(action, allowedActions) === -1) {
+                        console.debug("invalid action: " + action);
+                        return false;
+                    }
                     $('#progress-modal').modal('show');
                     Dajaxice.vcweb.core.experiment_controller(function(response) {
                         if (response.success) {
