--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -128,6 +128,17 @@
     </ul>
 </script>
 <script type='text/html' id='FINAL_DEBRIEFING'>
+    <h2>Payment</h2>
+    <table class='table table-bordered table-condensed'>
+        <thead>
+            <tr><th>Session 1</th><th>Session 2</th></tr>
+        </thead>
+        <tbody>
+            <tr><td><span class='badge badge-success' data-bind='text: sessionOneStorage'></span> tokens:  <span class='text-success' data-bind='text: sessionOneEarnings'</span></td>
+                <td><span class='badge badge-success' data-bind='text: sessionTwoStorage'></span> tokens:  <span class='text-success' data-bind='text: sessionTwoEarnings'></span></td>
+            </tr>
+        </tbody>
+    </table>
     <h2>Experiment Results</h2>
     <p>
     Thank you for participating.  As you recall from the initial instructions, we will pay you for one of the two
@@ -137,21 +148,10 @@
     </p>
 
     <div class='qualtrics-survey'>
-        <iframe width="100%" height="100%" data-bind='attr: { src: surveyUrl }'>
+        <iframe width="100%" height="800" data-bind='attr: { src: surveyUrl }'>
             Your browser doesn't seem to support iframes, please <a data-bind='attr: { href: surveyUrl }'>follow this link to take the survey.</a>
         </iframe>
     </div>
-    <h2>Payments</h2>
-    <table class='table table-bordered table-condensed'>
-        <thead>
-            <tr><th>Session 1</th><th>Session 2</th></tr>
-        </thead>
-        <tbody>
-            <tr><td><span class='badge badge-success' data-bind='text: sessionOneStorage'></span> <span class='text-success' data-bind='text: sessionOneEarnings'</span></td>
-                <td><span class='badge badge-success' data-bind='text: sessionTwoStorage'></span> <span class='text-success' data-bind='text: sessionTwoEarnings'></span></td>
-            </tr>
-        </tbody>
-    </table>
 </script>
 <script type='text/html' id='TREATMENT_A_INSTRUCTIONS'>
 <h3>Session <span data-bind='text: sessionId'></span> Instructions</h3>
