fixing todays progress bootstrap tour text

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -384,7 +384,7 @@ $(function() {
             element: "#todays-progress",
             placement: "top",
             title: "Today's Progress",
-            content: "This chart displays your average group score in green and the average group score needed to advance to the next level in gray.  To advance to level 2 your group average score needs to reach 50."
+            content: "This chart shows your current group score (green) in relation to your group score goal (gray). Maximize your chances at earning a prize by helping your group meet the group score goal each day."
         },
         {
             element: "#unlocked-challenge-tab",
